--- a/yuchsign/war/Yuchsign.css
+++ b/yuchsign/war/Yuchsign.css
@@ -29,17 +29,14 @@ h1 {
   width: 420px;
 }
 
+.gwt-TextBox-SocketPort{
+	ime-mode:disabled;
+}
+
 .waitingLabel{
 	padding:2px 2px 2px 2px;
 	border:1px solid #F0F0F0;
 	background: #FFFFF0;
-}
-
-.BberPanel{
-	padding:5px 5px 5px 5px;
-	border:1px solid #F0F0F0;
-	background: #FFFFF0;
-	width: 440px;
 }
 
 .logonVPanel {
