--- a/yuchdroid16/res/layout/main.xml
+++ b/yuchdroid16/res/layout/main.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    >
+    android:weightSum="1" android:orientation="vertical">
+    <TextView android:text="TextView" android:id="@+id/textView1" android:layout_width="302dp" android:layout_height="wrap_content"></TextView>
+    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout1">
+        <Button android:text="@string/start_svr_but" android:id="@+id/start_svr" android:layout_height="wrap_content" android:layout_width="112dp"></Button>
+        <Button android:text="@string/stop_svr_but" android:id="@+id/stop_svr" android:layout_height="wrap_content" android:layout_width="107dp"></Button>
+    </LinearLayout>
 </LinearLayout>
