--- a/yuchdroid16/res/layout/mail_list.xml
+++ b/yuchdroid16/res/layout/mail_list.xml
@@ -2,11 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#ffffff">
+    android:background="#ffffff"
+    >
     
     <ListView android:id="@+id/android:list"
-          android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"/>
+          	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:divider="#ddd"
+        	android:dividerHeight="1dp"
+        	android:headerDividersEnabled="false"
+        	android:footerDividersEnabled="true" />
+        	
   	<TextView android:id="@+id/android:empty"
           android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
