--- a/yuchdroid16/res/layout/mail_list_item.xml
+++ b/yuchdroid16/res/layout/mail_list_item.xml
@@ -5,40 +5,57 @@
     android:background="#ffffff"
     android:padding="6dip">
     
-    <ImageView
-        android:id="@+id/icon"
-        
+    <CheckBox
+    	android:visibility="invisible"
+        android:id="@+id/mail_check_btn"
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_marginRight="6dip"
-        
-        android:src="@drawable/icon" />
+        android:layout_height="wrap_content"
+        android:width="8dp"
+        android:height="8dp"
+        android:layout_marginRight="6dip"/>
 
     <LinearLayout
         android:orientation="vertical"
-    
         android:layout_width="0dip"
         android:layout_weight="1"
         android:layout_height="fill_parent">
 
-        <TextView
-        	android:id="@+id/mail_subject"
-            android:layout_width="fill_parent"
-            android:layout_height="0dip"
-            android:layout_weight="1"
-            android:textColor="#000000"
-            android:gravity="center_vertical"
-            android:text="Mail Subject" />
+ 		<LinearLayout>
+ 			<TextView
+	        	android:id="@+id/mail_subject"
+	            android:layout_width="wrap_content"
+	            android:layout_height="0dip"
+	            android:layout_weight="1"
+	            android:textColor="#000000"
+	            android:gravity="center_vertical"/>
+	            
+            <TextView
+	        	android:id="@+id/mail_body"
+	            android:layout_width="wrap_content"
+	            android:layout_height="0dip"
+	            android:layout_weight="1"
+	            android:textColor="#d0d0d0"
+	            android:gravity="center_vertical"/>
+	            
+	        <CheckBox
+	        	android:id="@+id/mail_mark_btn"
+	        	android:layout_width="wrap_content"
+        		android:layout_height="wrap_content"
+        		android:background="@android:drawable/star_off"
+        		android:checked="@android:drawable/star_on"
+        		android:gravity="right"
+	        />
+ 		</LinearLayout>
+        
             
         <TextView  
-        	android:id="@+id/mail_content"
+        	android:id="@+id/mail_from_to"
             android:layout_width="fill_parent"
             android:layout_height="0dip"
             android:layout_weight="1" 
             android:textColor="#000000"
             android:singleLine="true"
-            android:ellipsize="marquee"
-            android:text="Mail Conntent" />
+            android:ellipsize="marquee" />
             
     </LinearLayout>
 
